# libsquish

./: .gitignore  CMakeLists.txt  build.sh
